HHH-19879: Move Hibernate Tools' reveng module to Hibernate ORM and merge the relevant ant/gradle/maven plugins   - Move the Gradle plugin functional tests
Signed-off-by: Koen Aers <koen.aers@gmail.com>